--- a/layout.css
+++ b/layout.css
@@ -328,7 +328,7 @@
 					/*---Presento start--------------*/
 				   .Presento{
 					   background-color:black;
-					   height:400px;
+					   padding:50px 0;
 					   
 				   }
 				   
@@ -344,7 +344,7 @@
 					/*---Presento start--------------*/
 				   .end{
 					   background-color:red;
-					   height:150px;
+					    padding:50px 0;
 					   
 				   }
 				   
