--- a/layout.css
+++ b/layout.css
@@ -1,23 +1,15 @@
 
 
             /*------------header-------------*/
-.header{
-	background-color:orange;
-	height:100px;
-
+.navbar a{
+	color:black;
+	font-size:17px;
+	font-weight:600;
+	
 }
 
-.hed-con{
-	background-color:red;
-	height:70px;
-}
-.hed-list{
-	background-color:red;
-	height:70px;
-}
-.hed-btn{
-	background-color:red;
-	height:70px;
+.navbar-nav a:hover{
+	color:red;
 }
 
 			 /*------------header end-------------*/
@@ -26,36 +18,84 @@
 			  /*------------bg-img start-------------*/
 			  
 	.bg-img{
-	background-color:yellow;
-	height:500px;
+		
+	background-image:linear-gradient(rgba(0,0,0,0.45),rgba(0,0,0,0.45)),url("hero-bg.jpg");
+	background-size:cover;
+	background-position:center;
+	background-repeat:no-repeat;
+	font-family:raleway;
+
 }
 
 .bg-content{
-	background-color:black;
-	height:300px;
+	padding:80px 0;
+
+}
+
+.bg-content h1{
+	font-size:50px;
+	font-weight:bold;
+}
+.bg-content p{
+	font-size:25px;
+	
+}
+.bg-content button:hover{
+	background-color:transparent;
+	border:1px solid #fff;
 }
 
 				 /*------------bg-img end-------------*/
 				 
 				 
 				 
-				  /*------------icon-list start-------------*/
+				  /*------------beand-list start-------------*/
 				  
 		
 	.icon{
-	background-color:orange;
-	height:150px;
+	padding:50px 0;
 }	  
-.icon-list{
-	background-color:white;
-	height:80px;
 
+.icon-list{
+	padding: 10px 30px;
+  }
+.icon-list img {
+	width:100%;
+	height:auto 0;
+	filter:grayscale(100%);
+	opacity:0.5;
 }	  
+.icon-list:hover  img{
+	  filter: grayscale(0%);
+	  opacity: 1;
+  }
+  
+  .circle{
+	 text-align: center;
+	 padding: 20px 0;
+  }
+  .circle span{
+	  display: inline-block;
+	  width: 12px;
+	  height: 12px;
+	  border:  1px solid red;
+	  background-color: #fff;
+	  opacity: 0.8;
+	  border-radius: 50%;
+	  margin: 0 3px;
+	  cursor: pointer;
+  }
+  .circle span:hover{
+	  background-color: red;
+  }
+  .circle span.active{
+	   background-color:red;
+  }
 				  
 				  
 				  
 				  
-				   /*------------icon-list end-------------*/
+				   /*------------brand-list end-------------*/
 				   
 				   
 				   /*------------about start-------------*/
@@ -77,13 +117,15 @@
 				   }
 				   .about-itm{
 					   
-					   height:400px;
-					   background-color:red;
+					   height:
+					   background-color:
 					   
 				   }
-				   .about-icon{
-					   background-color:white;
-					   height:180px;
+				   .about-icon h5{
+					  font-weight:bold;
+				   }
+				   .about-itm h2{
+					  font-weight:bold;
 				   }
 				  
 				   
@@ -93,12 +135,11 @@
 				   
 				   /*----number start--------------*/
 				   .number{
-					   background-color:red;
+					   background-color:;
 					   padding:50px 0;
 				   }
-				   .num-icon{
-					   height:150px;
-					   background-color:white;
+				   .num-icon h1{
+					   font-weight:bold;
 				   }
 				   
 				   
@@ -127,7 +168,7 @@
 					/*----services start--------------*/
 				   .services{
 					   position:relative;
-					   height:800px;
+					   height:px;
 					   padding:50px 0;
 				   }
 				   .services:after{
@@ -137,20 +178,23 @@
 					   width:100%;
 					   left:0;
 					   top:0;
-					   background-color:orange;
+					   background-color:black;
 					   transform:skewY(-3deg);
 					   z-index:-1;
 				   }
 				   .sec-title{
 					   
 					   height:100px;
-					   background-color:white;
+					   background-color:;
 				   }
 				   
 				   .sec-icon{
-					   height:150px;
-					   background-color:black;
+					   display:flex;
+					   background-color:#2b2b2b;
+					   border-radius:10px;
+					   padding:30px;
 				   }
+				   
 				   
 				   
 				    /*----services end--------------*/
@@ -159,20 +203,24 @@
 					
 					/*----portfolio start--------------*/
 				   .portfolio{
-					   background-color:green;
+					   background-color:;
 				
 					   padding:50px 0;
 				   }
 				   .port-title{
 					   
-					   height:100px;
-					   background-color:white;
+					   height:
+					   background-color:;
 				   }
 				   
-				   .port-img{
-					   height:200px;
-					   background-color:black;
+				   .port-img img{
+					   margin-top:30px;
+					   width:100%;
 				   }
+				   .port-title button:hover{
+					 background-color:#dc3545;
+				   }
+				   
 				   
 				   
 				    /*----portfolio end--------------*/	
@@ -182,19 +230,23 @@
 					
 					/*---TESTIMONIALS start--------------*/
 				   .TESTIMONIALS{
-					   background-color:yellow;
+					   background-color:;
 					   
 					   padding:50px 0;
 				   }
 				   .test-title{
 					   
-					   height:100px;
-					   background-color:white;
+					   height:;
+					   background-color:;
 				   }
 				   
 				   .test-img{
-					   height:300px;
-					   background-color:black;
+					   height:;
+					   background-color:;
+				   }
+				   .card {
+					   border:0;
+					   border-radius:10px;
 				   }
 				   
 				   
@@ -215,51 +267,88 @@
 					   width:100%;
 					   left:0;
 					   top:0;
-					   background-color:orange;
+					   background-color:black;
 					   transform:skewY(-3deg);
 					   z-index:-1;
 				   }
 				   .pric-title{
 					   
-					   height:100px;
-					   background-color:white;
+					   height:;
+					   background-color:;
 				   }
 				   
 				   .pric-img{
-					   height:400px;
-					   background-color:black;
+					   height:;
+					   background-color:#2b2b2b;
+					   border-radius:10px;
+				   }
+				   
+				   .pric1-img{
+					   height:;
+					   background-color:#e03a3c;
+					    border-radius:10px;
+				   }
+				   .pric1-img button:hover{
+					   background-color:#e03a3c;
+					   color:white;
+				   }
+				   .pric-img button:hover{
+					   background-color:#2b2b2b;
+					   color:white;
+				   }
+				   .pric-img .head-tit{
+					   font-size:20px;
+				   }
+				   .pric1-img .head-tit{
+					   font-size:20px;
 				   }
 				   
 				   
-				    /*----TESTIMONIALS end--------------*/	
+				    /*----price end--------------*/	
 					
 					
 					
 						/*---qustion start--------------*/
 				   .qustion{
-					   background-color:black;
-					   height:600px;
+					   background-color:;
+					   height:x;
 					   padding:50px 0;
 				   }
 				   .qust-title{
 					   
-					   height:100px;
-					   background-color:white;
+					   height:px;
+					   background-color:;
 				   }
 				   
 				   .qust-con{
-					   height:50px;
-					   background-color:orange;
+					   height:;
+					   background-color:;
 				   }
-				   
-				   
-				    /*----qustion end--------------*/	
+				   .accordion-item h2 button:hover{
+				     color:#e03a3c;
+				   }
+				  .accordion-button:focus{
+					  box-shadow: none;
+				  } 
+				   .accordion-header{
+					   background-color: none;
+				   }
+				   .accordion-button:not(.collapsed){
+					   background-color: white;
+					  box-shadow:none;
+						color: red;
+						
+				   }
+				   .accordion-header button{
+					   font-size:20px;
+				   }
+				    /*----qustnoneion end--------------*/	
 					
 					
 					/*---team start--------------*/
 				   .team{
 					 position:relative;
-					   
+					   font-family:raleway;
 					   padding:50px 0;
 				   }
 				   
@@ -270,19 +359,24 @@
 					   width:100%;
 					   left:0;
 					   top:0;
-					   background-color:blue;
+					   background-color:black;
 					   transform:skewY(-3deg);
 					   z-index:-1;
 				   }
 				   .team-title{
 					   
-					   height:100px;
-					   background-color:white;
+					   height:;
+					   background-color:;
 				   }
 				   
 				   .team-img{
-					   height:350px;
-					   background-color:black;
+					   height:;
+					   background-color:;
+				   }
+				   
+				   .card-body p{
+					   color:#999;
+				   
 				   }
 				   
 				   
@@ -291,67 +385,109 @@
 					
 					/*---contact start--------------*/
 				   .contact{
-					   background-color:red;
+					   background-color:;
 					   
 					   padding:50px 0;
 				   }
 				   .cont-title{
 					   
-					   height:100px;
-					   background-color:white;
+					   height:;
+					   background-color:;
 				   }
 				   
-				   .address{
-					   height:200px;
-					   background-color:black;
+				   .address iconify-icon{
+					  border:dotted 2px #e03a3c;
+					   border-radius:25px;
+					   padding:5px;
 				   }
 				   
 				   .address-1{
-					   height:50px;
-					   background-color:black;
+					   height:;
+					   background-color:;
 				   }
 				   
 				   .address-2{
-					   height:150px;
-					   background-color:black;
+					   height:;
+					   background-color:;
 				   }
 				   
 				   .address-3{
-					   height:50px;
-					   background-color:black;
+					   height:;
+					   background-color:;
 				   }
-				   
+				   .address{
+					   color:#444444;
+				   }
 				   
 				    /*----contact end--------------*/	
 					
 					
 					/*---Presento start--------------*/
 				   .Presento{
-					   background-color:black;
+					   background-color:#2b2b2b;
 					   padding:50px 0;
 					   
 				   }
 				   
 				   
 				   .pres-list{
-					   height:300px;
-					   background-color:orange;
+					   height:
+					   background-color:
+				   }
+				   .pres-list a{
+					   color:#999;
+					   text-decoration:none;
 				   }
 				   
-				   
+				   .base1 p:hover{
+					   color:white;
+					   
+				   }
+				   .base1 p iconify-icon{
+					   vertical-align: sub;
+				   }
+				   .out-side{
+					border: 2px solid white;
+					border-radius:5px;
+					background: #fff;
+					padding: 1px;
+					width: 90%;
+					position: absolute;
+					}
+					.subscribe{
+						position: relative;
+					}
+					.sub{
+					position: absolute;
+					transform: translateY(-3px);
+					border-radius:5px;
+					background-color:#e03a3c;
+					text-align: center;
+					font-size: 16px;
+					color: #fff;
+					height:33px;
+					border: 1px solid #e03a3c ;
+					line-height: 30px;
+					padding: 0px 24px;
+					cursor: pointer;
+					}
+					.out-side input{
+						border:0;
+					}
+					   
 				    /*----Presento end--------------*/	
 					
 					/*---Presento start--------------*/
 				   .end{
-					   background-color:red;
-					    padding:50px 0;
+					   background-color:black;
+					   height:px;
 					   
 				   }
 				   
 				   
 				   .end-list{
-					   height:100px;
-					   background-color:orange;
+					   height:;
+					   background-color:;
 				   }
 				   
 				   
